[package]
name = "ecies"
version = "0.2.1"
# docs
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "Elliptic Curve Integrated Encryption Scheme for secp256k1 in Rust"
edition = "2018"
keywords = [
  "secp256k1",
  "crypto",
  "ecc",
  "ecies",
  "cryptocurrency",
]
license = "MIT"
readme = "README.md"
# links
documentation = "https://docs.rs/ecies/latest/ecies/"
homepage = "https://ecies.org/rs/"
repository = "https://github.com/ecies/rs"

[features]
with-bench = []
default = ["mesalock_sgx"]
mesalock_sgx = []

[dependencies]
libsecp256k1 = { git = "https://github.com/mesalock-linux/libsecp256k1-rs-sgx", tag = "sgx_1.1.3"  }
sha2 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx", tag = "sgx_1.1.3"  }
rust-crypto = { git = "https://github.com/mesalock-linux/rust-crypto-sgx", tag = "sgx_1.1.3"  }

rand = {git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3", features=["nightly"] }

sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"} 
sgx_rand = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
num-traits = { git = "https://github.com/mesalock-linux/num-traits-sgx" }
num-integer = { git = "https://github.com/mesalock-linux/num-integer-sgx" }

[dev-dependencies]
criterion = "0.3.3"
hex = "0.4.2"
futures-util = "0.3.8"
reqwest = "0.11.0"
tokio = {version = "1.0.1", features = ["rt-multi-thread"]}

[[bench]]
harness = false
name = "simple"
path = "bench/simple.rs"
