[package]
name = "ecies"
version = "0.2.1"
# docs
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "Elliptic Curve Integrated Encryption Scheme for secp256k1 in Rust"
edition = "2018"
keywords = [
  "secp256k1",
  "crypto",
  "ecc",
  "ecies",
  "cryptocurrency",
]
license = "MIT"
readme = "README.md"
# links
documentation = "https://docs.rs/ecies/latest/ecies/"
homepage = "https://ecies.org/rs/"
repository = "https://github.com/ecies/rs"

[features]
with-bench = []
default = ["mesalock_sgx"]
mesalock_sgx = []

[dependencies]
rust-crypto = { git = "https://github.com/mesalock-linux/rust-crypto-sgx", tag = "sgx_1.1.3"  }
libsecp256k1 = { git = "https://github.com/mesalock-linux/libsecp256k1-rs-sgx", tag = "sgx_1.1.3"  }
sha2 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx", tag = "sgx_1.1.3"  }

# pure rust aes
aes-gcm = {version = "0.8.0"}
typenum = {version = "1.12.0"}

sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"} 
sgx_rand = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
num-traits = { git = "https://github.com/mesalock-linux/num-traits-sgx" }
num-integer = { git = "https://github.com/mesalock-linux/num-integer-sgx" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = {git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3", features=["nightly"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = {git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3", features=["nightly"] }

[dev-dependencies]
criterion = "0.3.3"
hex = "0.4.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.19"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
futures-util = "0.3.8"
reqwest = "0.11.0"
tokio = {version = "1.0.1", features = ["rt-multi-thread"]}

[[bench]]
harness = false
name = "simple"
path = "bench/simple.rs"
